Second version is created

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Git Test</title>
 </head>
 <body>
-    <h1>This is the first version of test-git project.</h1>
+    <h1>This is the second version of test-git project.</h1>
 </body>
 </html>
