--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>This is the second version of test-git project.</h1>
     <h2>Third edition</h2>
+    <h3>trying to add changes via fixpages branch.</h3>
 </body>
 </html>
